typescript/checker/tests/conformance/parser/ecmascript5/ErrorRecovery/ParameterLists/parserErrorRecovery_ParameterList4.ts.stderr
error: Unexpected token Some(Hash)
 --> $DIR/tests/conformance/parser/ecmascript5/ErrorRecovery/ParameterLists/parserErrorRecovery_ParameterList4.ts:1:14
  |
1 | function f(a,#) {
  |              ^

